# AlmaLeadFinder

./: .gitignore  AI_USAGE.md  DESIGN.md  NOTES.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: auth.py  leads.py
backend/app/core/: config.py  security.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_create_leads.py  0002_unique_lead_email.py
backend/app/models/: __init__.py  lead.py
backend/app/schemas/: auth.py  lead.py
backend/app/services/: email.py  email_templates.py  leads.py  notifications.py  storage.py
backend/tests/: conftest.py  test_auth_google.py  test_email_templates.py  test_leads_api.py
backend/tests/e2e/: test_stack.py
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/e2e/: admin-auth.spec.ts  helpers.ts  lead-form.spec.ts  lead-journey.spec.ts
frontend/lib/: api.ts
scripts/: e2e.sh
